Fix layout issue when gif is loaded due to padding

--- a/css/style.css
+++ b/css/style.css
@@ -21,9 +21,6 @@ html {
   background-color: #eee;
   padding: 2rem 2rem;
 }
-.content section {
-  padding: 1rem 2rem;
-}
 @media screen and (min-width: 800px) {
   .content {
     height: calc(100vh - 7rem);
@@ -45,12 +42,18 @@ html {
   }
 }
 
+.searchSection {
+  padding: 1rem 2rem;
+}
 @media screen and (min-width: 800px) and (max-width: 1200px) {
   .searchSection {
     grid-column: 1/-1;
   }
 }
 
+.trendingSection {
+  padding: 1rem 2rem;
+}
 @media screen and (min-width: 800px) and (max-width: 1200px) {
   .trendingSection {
     grid-column: 2/-1;
